17/02/2014 - Inizio del progetto, creazione della classe cTable, che gestirà tutti i dati ricevuti in ingresso dal sistema, che verrà creato all'inizio del programma.
Inizio abbozzo interfaccia della mainForm.
19/02/2014 - Popolazione tabella. 
Completata scrittura delle variabili di scarto, da scrivere la Z
14/03/2014 - Riordinato il codice, aggiunta la lettura della FunzioneZ. 
Minima ottimizzazione del codice
08/04/2014 - Metodizzazione della creazione della tabella.
Calcolo della variabile entrante
13/04/2014 - Aggiunte le basi sull’inserimento MAC style. Fiquo.
Da sostituire completamente tutta l’interfaccia iniziale